# statcpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.ja.md  README.md  generate_docs.sh  todo.ja.md  todo.md
.github/workflows/: ci.yml  docs.yml
build-ja/: statcppConfig.cmake
build-ja/test/: example_anova  example_basic_statistics  example_categorical  example_clustering  example_continuous_distributions  example_correlation_covariance  example_data_wrangling  example_discrete_distributions  example_dispersion_spread  example_distance_metrics  example_effect_size  example_estimation  example_frequency_distribution  example_glm  example_linear_regression  example_missing_data  example_model_selection  example_multivariate  example_nonparametric_tests  example_numerical_utils  example_order_statistics  example_parametric_tests  example_power_analysis  example_random_engine  example_resampling  example_robust  example_shape_of_distribution  example_special_functions  example_survival  example_time_series  statcpp_tests[1]_include.cmake  statcpp_tests[1]_tests.cmake
build-ja/testWithR/: verify_vs_r
cmake/: statcppConfig.cmake.in
docs/: API_REFERENCE.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  INSTALLATION.md  README.md  USAGE.md
docs-ja/: API_REFERENCE.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  INSTALLATION.md  USAGE.md
examples/: CMakeLists.txt  example_anova.cpp  example_basic_statistics.cpp  example_categorical.cpp  example_clustering.cpp  example_continuous_distributions.cpp  example_correlation_covariance.cpp  example_data_wrangling.cpp  example_discrete_distributions.cpp  example_dispersion_spread.cpp  example_distance_metrics.cpp  example_effect_size.cpp  example_estimation.cpp  example_frequency_distribution.cpp  example_glm.cpp  example_linear_regression.cpp  example_missing_data.cpp  example_model_selection.cpp  example_multivariate.cpp  example_nonparametric_tests.cpp  example_numerical_utils.cpp  example_order_statistics.cpp  example_parametric_tests.cpp  example_power_analysis.cpp  example_random_engine.cpp  example_resampling.cpp  example_robust.cpp  example_shape_of_distribution.cpp  example_special_functions.cpp  example_survival.cpp  example_time_series.cpp
examples-ja/: CMakeLists.txt  README.md  build.sh  example_anova.cpp  example_basic_statistics.cpp  example_categorical.cpp  example_clustering.cpp  example_continuous_distributions.cpp  example_correlation_covariance.cpp  example_data_wrangling.cpp  example_discrete_distributions.cpp  example_discrete_distributions.cpp.backup  example_dispersion_spread.cpp  example_distance_metrics  example_distance_metrics.cpp  example_effect_size.cpp  example_estimation.cpp  example_frequency_distribution.cpp  example_glm.cpp  example_linear_regression.cpp  example_missing_data.cpp  example_model_selection.cpp  example_multivariate.cpp  example_nonparametric_tests.cpp  example_numerical_utils.cpp  example_numerical_utils.cpp.backup  example_order_statistics.cpp  example_parametric_tests.cpp  example_power_analysis.cpp  example_random_engine.cpp  example_resampling.cpp  example_resampling.cpp.backup  example_robust.cpp  example_shape_of_distribution.cpp  example_special_functions.cpp  example_survival.cpp  example_time_series.cpp
include/: anova.hpp  basic_statistics.hpp  clustering.hpp  continuous_distributions.hpp  correlation_covariance.hpp  data_wrangling.hpp  discrete_distributions.hpp  dispersion_spread.hpp  effect_size.hpp  estimation.hpp  glm.hpp  linear_regression.hpp  missing_data.hpp  model_selection.hpp  multivariate.hpp  nonparametric_tests.hpp  numerical_utils.hpp  parametric_tests.hpp  power_analysis.hpp  random_engine.hpp  resampling.hpp  robust.hpp  shape_of_distribution.hpp  statcpp.hpp  survival.hpp  time_series.hpp
include-ja/: anova.hpp  basic_statistics.hpp  clustering.hpp  continuous_distributions.hpp  correlation_covariance.hpp  data_wrangling.hpp  discrete_distributions.hpp  dispersion_spread.hpp  distance_metrics.hpp  effect_size.hpp  estimation.hpp  glm.hpp  linear_regression.hpp  missing_data.hpp  model_selection.hpp  multivariate.hpp  nonparametric_tests.hpp  numerical_utils.hpp  parametric_tests.hpp  power_analysis.hpp  random_engine.hpp  resampling.hpp  robust.hpp  shape_of_distribution.hpp  statcpp.hpp  survival.hpp  time_series.hpp
include-ja/statcpp/: anova.hpp  basic_statistics.hpp  categorical.hpp  clustering.hpp  continuous_distributions.hpp  correlation_covariance.hpp  data_wrangling.hpp  discrete_distributions.hpp  dispersion_spread.hpp  distance_metrics.hpp  effect_size.hpp  estimation.hpp  frequency_distribution.hpp  glm.hpp  linear_regression.hpp  missing_data.hpp  model_selection.hpp  multivariate.hpp  nonparametric_tests.hpp  numerical_utils.hpp  order_statistics.hpp  parametric_tests.hpp  power_analysis.hpp  random_engine.hpp  resampling.hpp  robust.hpp  shape_of_distribution.hpp  special_functions.hpp  statcpp.hpp  survival.hpp  time_series.hpp
include/statcpp/: anova.hpp  basic_statistics.hpp  categorical.hpp  clustering.hpp  continuous_distributions.hpp  correlation_covariance.hpp  data_wrangling.hpp  discrete_distributions.hpp  (+23 more)
test/: CMakeLists.txt  test_anova.cpp  test_basic_statistics.cpp  test_categorical.cpp  test_clustering.cpp  test_continuous_distributions.cpp  test_correlation_covariance.cpp  test_data_wrangling.cpp  test_discrete_distributions.cpp  test_dispersion_spread.cpp  test_distance_metrics.cpp  test_effect_size.cpp  test_estimation.cpp  test_frequency_distribution.cpp  test_glm.cpp  test_linear_regression.cpp  test_missing_data.cpp  test_model_selection.cpp  test_multivariate.cpp  test_nonparametric_tests.cpp  test_order_statistics.cpp  test_parametric_tests.cpp  test_power_analysis.cpp  test_random_engine.cpp  test_resampling.cpp  test_robust.cpp  test_shape_of_distribution.cpp  test_special_functions.cpp  test_survival.cpp  test_time_series.cpp
testWithR/: CMakeLists.txt  METHODOLOGY.md  NON_VERIFIABLE_FUNCTIONS.md  VERIFIED_FUNCTIONS.md  generate_reference_values.R  reference_output.txt  verify_vs_r.cpp
